--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,69 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  padding: 0;
   text-align: center;
 }
 
+.hero_canvas canvas {
+  border-radius:120px
+}
+
 .hero {
-  display: flex;
-  flex-direction: row;
-  text-align: left;
+  text-align: center;
+  color: #242424;
   height: 100vh;
-}
-
-.hero_left {
-  width:45%;
+  background-color: #CDD5F4;
   height: 100%;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  border-radius:120px;
+  position: relative;
+  overflow: hidden;
+
 }
 
-.hero_left p {
+.hero_text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 100;
+}
+
+.hero_text p {
   font-size: 1.2rem;
 }
 
-.hero_left h1 {
-  margin-bottom: 0px;
+.hero_text_title {
+  display: flex;
+  overflow: hidden;
 }
-.hero_right {
-  width:55%;
-  height: 100%;
 
+.hero_text h1 {
+  margin-bottom: 0px;
+  font-size: 2.8rem;
+  padding: 0;
+  mix-blend-mode: difference; /* Puedes ajustar el modo de mezcla según tus preferencias */
+  margin-right: 15px;
+
+}
+.hero_bg {
+  position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .button_group {
   display: flex;
   flex-direction: row;
   gap: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .hero_text h1 {
+    font-size: 4.6rem;
+  }
 }
